test/error/parse/ArrayDimensionsTooMany.mod
MODULE ArrayDimensionsTooMany;
TYPE T = ARRAY 1,1,1,1,1,1,1,1 OF INTEGER;
END ArrayDimensionsTooMany.
